<resources>
    <string name="app_name">PopularMovies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title:</string>
    <string name="LargeTextTemp">Large Text</string>
    <string name="sort_by">Sort By:</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="top_rated_value">top_rated.desc</string>
    <string name="popular_value">popularity.desc</string>
</resources>
