<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meet.vansh.popularmovies.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sort_by"
            android:layout_gravity="center_vertical"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio_height"
            android:id="@+id/RadioSort"
            android:layout_weight="0.47"
            android:weightSum="1"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/popular"
                android:value="@string/popular_value"
                android:id="@+id/popular_radio"
                android:checked="true"
                android:layout_weight="0.5" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:value="@string/top_rated_value"
                android:id="@+id/toprated_radio"
                android:layout_weight="0.5"
                android:checked="false" />

        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
    <include layout="@layout/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/frame_movie_final"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" /></LinearLayout></LinearLayout>

</RelativeLayout>
